--- a/src/app/operation/experience-list/experience-list.component.html
+++ b/src/app/operation/experience-list/experience-list.component.html
@@ -1,8 +1,8 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col" i18n="Nick EL@@nickEL">Nick</th>
-      <th scope="col" i18n="Intent EL@@IntentEL">Intent</th>
+      <th scope="col" i18n="Nick@@nick">Nick</th>
+      <th scope="col" i18n="Intent@@Intent">Intent</th>
       <th scope="col" i18n="Stock@@stock">Stock</th>
       <th scope="col" i18n="Amount@@amount">Amount</th>
       <th scope="col" i18n="Price@@price">Price</th>
