--- a/src/app/learning/paper-quick-buy/paper-quick-buy.component.html
+++ b/src/app/learning/paper-quick-buy/paper-quick-buy.component.html
@@ -1,3 +1,3 @@
-<button title="Make a paper buy (A fake buy just for learning purposes)" type="button" class="btn btn-primary" (click)="quickPaperBuy();">
-  Paper Purchase
-</button>
+<button title="Make a paper buy (A fake buy just for learning purposes)" type="button" class="btn btn-primary"
+                                                                                       (click)="quickPaperBuy();"
+                                                                                       i18n="Quick Paper Purchase@@quickPaperPurchase">Paper Purchase</button>
