--- a/src/app/note/note-modal/note-modal.component.html
+++ b/src/app/note/note-modal/note-modal.component.html
@@ -1,6 +1,6 @@
 <ng-template #content let-modal>
   <div class="modal-header">
-    <h4 class="modal-title">Notes</h4>
+    <h4 class="modal-title" i18n="Notes@@notes">Notes</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -8,9 +8,10 @@
   <div class="modal-body">
     <form class="form-inline" #notesForm="ngForm">
       <div class="form-group mx-sm-3 w-75">
-        <label for="note">Note:</label>
+        <label for="note" i18n="Note@@note">Note:</label>
         <input type="text" class="form-control w-75 mx-sm-3" name="note" id="note" [(ngModel)]="noteAtr.note" (keydown.enter)="onKeydown($event)">
-        <button type="button" class="btn btn-primary" (click)="add();" [disabled]="!notesForm.form.valid">Add</button>
+        <button type="button" class="btn btn-primary" (click)="add();" [disabled]="!notesForm.form.valid"
+          i18n="Add@@add">Add</button>
       </div>
     </form>
     <div class="row mt-4">
@@ -44,7 +45,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+    <button type="button" class="btn btn-light" (click)="modal.close('Close click')" i18n="Close@@close">Close</button>
   </div>
 </ng-template>
 
