--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -5,7 +5,8 @@
     <div class="col-3">
        <zen-operation-accordion (onOperationExperiment)="addExperience($event)"></zen-operation-accordion>
     </div>
-    <div class="col-9" *ngIf="experiences.length == 0"><span><i class="fa fa-arrow-left"></i> Click here to begin an experience</span></div>
+    <div class="col-9" *ngIf="experiences.length == 0"><span><i class="fa fa-arrow-lt"></i><span i18n="Begin
+          Experience@@beginExperience "> Click here to begin an experience</span></span></div>
   </div>
    
 <zen-bootstrap-officer></zen-bootstrap-officer>
