--- a/src/app/operation/experience/experience.component.html
+++ b/src/app/operation/experience/experience.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header">Experiment</div>
+  <div class="card-header" i18n="Experiment@@experiment">Experiment</div>
   <div class="card-body">
 <form #addExperienceForm="ngForm">
   <!-- TODO: Know bug, deslect the stock when an item is added. It is valid to exp, buy and sell -->
@@ -7,21 +7,22 @@
       [selectedStock]="stock"></zen-stock-select></p>
 
   <div class="form-group">
-    <label for="amount">*Amount: </label>
+    <label for="amount" i18n="Amount@@amount">*Amount: </label>
     <input type="text" class="form-control" id="amount" [(ngModel)]="experience.amount" name="amount" required>
   </div>
 
   <div class="form-group">
-    <label for="price">*Price: </label>
+    <label for="price" i18n="Price@@price">*Price: </label>
     <input type="text" class="form-control" id="price" [(ngModel)]="experience.price" name="price" required>
   </div>
 
   <div class="form-group">
-    <label for="nickname">Nickname: </label>
+    <label for="nickname" i18n="Nickname@@nickname">Nickname: </label>
     <input type="text" class="form-control" id="nickname" [(ngModel)]="experience.nickname" name="nickname">
   </div>
 
-  <button type="button" (click)="add();" class="btn btn-primary" [disabled]="!addExperienceForm.form.valid">Experiment
+  <button type="button" (click)="add();" class="btn btn-primary" [disabled]="!addExperienceForm.form.valid"
+    i18n="Experiment@@experiment">Experiment
   </button>
 </form>
   
