--- a/src/app/operation/quick-sell/quick-sell.component.html
+++ b/src/app/operation/quick-sell/quick-sell.component.html
@@ -1,2 +1,2 @@
 <button title="Project a sell. To execute it click on execute button." type="button" class="btn btn-primary"
-  (click)="quickSell();">Project Sale</button>
+  (click)="quickSell();" i18n="Project Sale@@projectsaleQS">Project Sale</button>
