--- a/src/app/operation/sell-focus/sell-focus.component.html
+++ b/src/app/operation/sell-focus/sell-focus.component.html
@@ -11,7 +11,8 @@
             <input type="checkbox" class="form-input" id="show-archived" name="show-archived"
                                                                        [(ngModel)]="archived"
                                                                        [checked]="archived"
-                                                                         (click)="updateArchived()">Archived
+                                                                         (click)="updateArchived()">
+                                                                        <span i18n="Archived@@archived">Archived</span>
           </label>
         </div>
       </form>
