--- a/src/app/learning/paper-buy-edit/paper-buy-edit.component.html
+++ b/src/app/learning/paper-buy-edit/paper-buy-edit.component.html
@@ -2,19 +2,20 @@
   <div class="row">
     <div class="col-6">
       <div class="form-group">
-        <label for="amount">Amount: </label>
+        <label for="amount" i18n="Amount@@amount">Amount: </label>
         <input type="text" class="form-control form-control-sm border border-primary" id="amount" [(ngModel)]="paperBuy.amount" name="amount">
       </div>
 
       <div class="form-group">
-        <label for="price">Price: </label>
+        <label for="price" i18n="Price@@price">Price: </label>
         <input type="text" class="form-control form-control-sm border border-primary" id="price" [(ngModel)]="paperBuy.price" name="price">
       </div>
 
       <div class="form-group">
-        <button type="button" class="btn btn-primary mr-1" (click)="save();" [disabled]="!paperBuyEditForm.form.valid">Edit
+        <button type="button" class="btn btn-primary mr-1" (click)="save();"
+          [disabled]="!paperBuyEditForm.form.valid"><span i18n="Edit@@edit">Edit</span>
         </button>
-        <button class="btn btn-primary mr-1" type="button" (click)="delete();">Delete</button>
+        <button class="btn btn-primary mr-1" type="button" (click)="delete();"><span i18n="Delete@@delete">Delete</span></button>
 
         <zen-paper-quick-sell class="mr-1" [paperBuy]="paperBuy" (onPaperSellCreated)="notifySellCreated($event)"></zen-paper-quick-sell>
         <!-- <zen-note-modal [operation_pk]="paperBuy.pk"></zen-note-modal> -->
@@ -22,14 +23,14 @@
     </div>
     <div class="col-6">
       <div class="form-group">
-        <label for="nickname">Nickname: </label>
+        <label for="nickname"><span i18n="Nickname@@nickname">Nickname</span>: </label>
         <input type="text" class="form-control form-control-sm border border-primary" id="nickname" [(ngModel)]="paperBuy.nickname" name="nickname">
       </div>
 
       <div class="form-group">
         <input type="checkbox" class="form-input" id="archived" name="archived" [(ngModel)]="paperBuy.archived"
                                                                 [checked]="paperBuy.archived">
-        <label for="checkbox">Archived</label>
+        <label for="checkbox"><span i18n="Archived@@archived">Archived</span></label>
       </div>
     </div>
   </div>
