--- a/src/app/learning/paper-quick-sell/paper-quick-sell.component.html
+++ b/src/app/learning/paper-quick-sell/paper-quick-sell.component.html
@@ -1,4 +1,3 @@
-<button title="Make a paper sell (A fake sell just for learning purposes)" type="button" class="btn btn-primary"
-  (click)="quickPaperSell();">
-  Paper Sale
-</button>
+<button i18n-title="ppsell tip@@paperSellTip" title="Make a paper sell (A fake sell just for learning purposes)"
+                                              type="button" class="btn btn-primary" (click)="quickPaperSell();"
+                                                            i18n="Paper sale@@paperSell"> Paper Sale </button>
