--- a/src/app/operation/operations-center/operations-center.component.html
+++ b/src/app/operation/operations-center/operations-center.component.html
@@ -14,7 +14,7 @@
     <mat-expansion-panel-header [ngStyle]="{'background': getBackgroundColor(experience)}">
 			<mat-panel-title>{{ experience.stock_data.code }}: {{ experience.stock_data.name }} ({{ experience.creation_date | date: "dd.MM.y" }})</mat-panel-title>
       <mat-panel-description>
-				{{ experience.nickname }} - Click for details -
+        {{ experience.nickname }} - <span i18n="Click for details@@clickForDetails">Click for details</span> -
       </mat-panel-description>
     </mat-expansion-panel-header>
       <div class="row">
@@ -29,9 +29,9 @@
       <mat-accordion [multi]="true" class="parametersPanel">
 				<mat-expansion-panel *ngFor="let buy of experience.buy_set; let b = index" [attr.data-index]="b" (afterExpand)="loadSolds(buy)">
 					<mat-expansion-panel-header [ngStyle]="{'background': getBackgroundColor(buy)}">
-            <mat-panel-title>A buy from: {{ buy.creation_date  | date: "dd.MM.y" }} ({{ buy.amount_available }}/{{ buy.amount }})</mat-panel-title>
+            <mat-panel-title><span i18n="A Buy from@@aBuyFrom ">A buy from</span>: {{ buy.creation_date  | date: "dd.MM.y" }} ({{ buy.amount_available }}/{{ buy.amount }})</mat-panel-title>
 						<mat-panel-description>
-              Gain: {{ buy.operation_gain_percent | number: '1.2-2' }} % - Click for details - {{ buy.nickname }}
+              <span i18n="Gain@@gain">Gain</span>: {{ buy.operation_gain_percent | number: '1.2-2' }} % - <span i18n="Click for details@@clickForDetails">Click for details</span> - {{ buy.nickname }}
 						</mat-panel-description>
 					</mat-expansion-panel-header>
 						<div class="row">
@@ -46,8 +46,9 @@
             <mat-accordion [multi]="true" class="parametersPanel">
               <mat-expansion-panel *ngFor="let sell of buy.sell_set; let s = index" [attr.data-index]="s">
                 <mat-expansion-panel-header [ngStyle]="{'background': getBackgroundColor(sell)}">
-                  <mat-panel-title>A sell from: {{ sell.creation_date | date: "dd.MM.y" }}</mat-panel-title>
-                  <mat-panel-description>Gain: {{ sell.stock_profit_percent | number: '1.2-2' }}% - Click for details -
+                  <mat-panel-title><span i18n="A sell from@@aSellFrom">A sell from</span>: {{ sell.creation_date | date: "dd.MM.y" }}</mat-panel-title>
+                  <mat-panel-description>Gain: {{ sell.stock_profit_percent | number: '1.2-2' }}% - <span i18n="Click for details@@clickForDetails">Click for
+                      details</span> -
                     {{ sell.nickname }}</mat-panel-description>
                 </mat-expansion-panel-header>
                   <div class="row">
